--- a/popup.html
+++ b/popup.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="css/style.css">
-  <title>Dictionary Data</title>
+  <title>WordSearch Extension: A Comprehensive Dictionary Tool</title>
     
 </head>
 <body>
   <a class="git-icon" href="https://github.com/niteshbhaiya4224" target="_blank">
-    <img src="https://github.com/fluidicon.png" alt="">
+    <img src="https://github.com/fluidicon.png" alt="icon">
 </a>
   <div class="search-container">
     <form id="searchForm" action="">
